data/derived/sp14/progs/unify/prog3212.ml.out
Characters 79-95:
  (t1, bigAdd (mulByDigit h1 rh::rt) rt)
               ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
